@@ -9,6 +9,7 @@ maintainer: the version number is updated from the top-level wscript file
 """
 
 HEXVERSION = 0x10409
+WAFVERSION = "1.4.9"
 ABI = 6
 
 CACHE_DIR          = 'c4che'
