@@ -9,6 +9,7 @@ meaning in configuration and build)
 * the helper functions have been moved to Utils.py
 * Task_gen.g_allobj -> bld.all_task_gen or Params.g_build.all_task_gen
 * Params.g_autoconfig -> Configure.autoconfig
+* Params.pprint -> Utils.pprint
 
 NEW IN WAF 1.4.3
 ----------------
